# FastShot

./: .gitignore  App.xaml  App.xaml.cs  FastShot.csproj  HiddenWindow.cs  README.md  TrayIconHost.cs  index.html  package.json  tsconfig.json  vite.config.ts
Models/: Config.cs
Services/: ClipboardService.cs  ConfigService.cs  FileStorageService.cs  HotkeyParser.cs  HotkeyService.cs  ScreenshotService.cs  ToastService.cs
Views/: SettingsWindow.xaml  SettingsWindow.xaml.cs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  screenshot.rs  tray.rs
