[package]
name    = "fastshot"
version = "1.0.0"
edition = "2021"

[lib]
name       = "fastshot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "fastshot"
path = "src/main.rs"

[dependencies]
tauri                        = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell           = "2"
screenshots                  = "0.8"
arboard                      = "3"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog          = "2"
tauri-plugin-notification    = "2"
serde                        = { version = "1", features = ["derive"] }
serde_json                   = "1"
dirs                         = "5"
chrono                       = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
